# experiments

./: LICENSE  README.md
bash/squashfs/: create-debian-squash-backup-big.sh  create-debian-squash-backup-mini.sh  create-debian-squash-backup.sh  create-squash.sh  grub.cfg
c/juliagen/: CMakeLists.txt  main.c  main.py
cpp/looped-destructors/: CMakeLists.txt  Readme.md  main.cpp
julia/: julia-set.jl
python/: bezier3d.py  julia.py  juliagen  timed.py
python/asyncio/: test01.py
python/asyncio-concurrent/: test04.py  test05.py
python/asyncio-socket/: test00.py  test01.py  test02.py
python/compare-generators/: generator_time.py
python/led-effects/: led_effects.py
python/math/: linear-force.py  shpere-analitycs.py  shpere-animation.py  shpere-dust.py  shpere-force.py
python/secure-udp/: example_client.py  example_server.py
python/serial-tests/: test03.py
python/shader-tree-fractal/: main.py
python/shader-tree-fractal/resources/: affgen.glsl  cube_simple.glsl  leaf.glsl  tree.glsl
python/smtplib-output/: Readme.md  config.py.example  smtp.py
python/tree-fractal/: fractal.py  fractal2.py  l-system-3d.py  l-system.py
qml/gstreamer-androqt/: .gitignore  CMakeLists.txt  Main.qml  build.sh  enviroment.sh.example  gstplayer.cpp  gstplayer.h  gstplayerfactory.cpp  gstplayerfactory.h  main.cpp
qml/gstreamer-androqt/android/: AndroidManifest.xml  build.gradle
qml/gstreamer-androqt/android/java/top/elfiny/: GstActivity.java  GstPlayer.java  GstSurfaceView.java
qml/gstreamer-multiplay/: CMakeLists.txt  Readme.md  enviroment.sh.example  gstreamerplayer.cpp  gstreamerplayer.h  main.cpp
qml/gstreamer-multiplay/android/java/org/freedesktop/gstreamer/: GStreamer.java
qml/gstreamer-test/: CMakeLists.txt  Main.qml  enviroment.sh  main.cpp
qml/multitouch-test/: CMakeLists.txt  main.qml
qml/testBlackHole3d/: BlackHoleMaterial.ui.qml  Scene.ui.qml  blackHole.frag  blackHole.vert  testBlackHole3d.qml  testBlackHole3d.qmlproject
qml/video-looping/: MediaQueue.qml  main.qml  qml.qrc  video-looping.pro
